Large commit where I added some input fields with names in the import view. Also removed unused using statements everywhere in the project

--- a/BroadvineOnboard/Content/Site.css
+++ b/BroadvineOnboard/Content/Site.css
@@ -24,7 +24,7 @@ textarea {
 }
 
 .logo{
-    background: url(logo-broadvine.gif) no-repeat;
+    background: url(logo-broadvine.png) no-repeat;
     width:240px;
     height:40px;
 }
