--- a/BroadvineOnboard/Views/Property/Import.cshtml
+++ b/BroadvineOnboard/Views/Property/Import.cshtml
@@ -19,19 +19,6 @@
             @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input class="property-field" name="Code" />
-                @*<div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        Dropdown
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                    </ul>
-                </div>*@
                 @*@Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })*@
                
@@ -99,7 +86,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AreaName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input class="property-field" name="Name" />
+                <input class="property-field" name="AreaName" />
                 @*@Html.DropDownList("AreaID", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.AreaID, "", new { @class = "text-danger" })*@
             </div>
@@ -244,7 +231,7 @@
             transport: {
                 read: {
                     url: "@Url.Action("GetPropertiesFromClient", "Property")",
-                    data: { Id: 0 }
+                    data: { Id: @Url. }
                 }
             }
         });
