BV-741 Changed bundled static assets to cdn. Dynamic stuff (site.css, etc.) gets bundled.

--- a/BroadvineOnboard/Views/Property/Import.cshtml
+++ b/BroadvineOnboard/Views/Property/Import.cshtml
@@ -231,10 +231,12 @@
             transport: {
                 read: {
                     url: "@Url.Action("GetPropertiesFromClient", "Property")",
-                    data: { Id: @Url. }
+                    data: { Id: @Model.ClientID }
                 }
             }
         });
+
+        console.log(propertyData);
 
         $(".property-field").kendoComboBox({
             dataTextField: "Text",
